WebIf: Clear css.css and fix for TABLE.invisible.
git-svn-id: http://streamboard.de.vu/svn/oscam/trunk@8797 4b0bc96b-bc66-0410-9d44-ebda105a78c1

--- a/webif/include/css.css
+++ b/webif/include/css.css
@@ -13,10 +13,11 @@ TABLE.config {width:750px}
 TABLE.configreader {width:850px}
 TABLE.statsbalance TD:last-child{line-height:20px;width:125px}
 TABLE.statsbalance TD:last-child IMG.icon{float:right;margin-left:10px}
-TABLE.invisiblelb {border-spacing:0px; width:100%}
-TABLE.invisiblelb TH {width:33%; text-align:left}
+TABLE.invisiblelb {border-spacing:0px;width:100%}
+TABLE.invisiblelb TH {width:33%;text-align:left}
 TABLE.invisiblelb TD {width:33%;font-size:12px;white-space: nowrap}
-TABLE.invisible TD {border:0px; font-family:Arial; font-size: 12px; padding:5px;background-color:#EEEEEE}
+TABLE.invisible {margin-left:0}
+TABLE.invisible TD {font-size:12px}
 TABLE.configmenu {line-height:16px}
 TH {height:10px;padding:5px;background-color:#CCCCCC;color:black}
 TH.statuscol0 {text-align:center;width:10px}
